--- a/templates/glossary_create.html
+++ b/templates/glossary_create.html
@@ -1,35 +1,31 @@
-{% extends 'base.html' %}
+{% extends '_base.html' %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
 
-    <div class="row justify-content-center my-5">
+    <div class="col-6 my-5">
 
-        <div class="col-6">
+        <div class="card">
 
-            <div class="card">
+            <div class="card-header">
+                用語集を作成する
+            </div>
 
-                <div class="card-header">
-                    用語集を作成する
-                </div>
+            <div class="card-body">
 
-                <div class="card-body">
+                <form method="POST" novalidate>
 
-                    <form method="POST" novalidate>
+                    {% csrf_token %}
 
-                        {% csrf_token %}
+                    {{ form|crispy }}
 
-                        {{ form|crispy }}
+                    <div class="text-center mt-3">
+                        <button type="submit" name="cancel" class="btn btn-secondary btn-sm me-2">キャンセル</button>
+                        <button type="submit" class="btn btn-primary btn-sm mx-2">作成</button>
+                    </div>
 
-                        <div class="text-center mt-3">
-                            <button type="submit" name="cancel" class="btn btn-secondary btn-sm me-2">キャンセル</button>
-                            <button type="submit" class="btn btn-primary btn-sm mx-2">作成</button>
-                        </div>
-
-                    </form>
-
-                </div>
+                </form>
 
             </div>
 
