--- a/templates/glossary_update.html
+++ b/templates/glossary_update.html
@@ -1,37 +1,33 @@
-{% extends 'base.html' %}
+{% extends '_base.html' %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
 
-    <div class="row justify-content-center my-5">
+    <div class="col-5 my-5">
 
-        <div class="col-5">
+        <div class="card">
 
-            <div class="card">
+            <div class="card-header">
+                <div class="text-center">
+                    用語集の詳細を編集する
+                </div>
+            </div>
 
-                <div class="card-header">
+            <div class="card-body">
+
+                <form method="POST" novalidate>
+
+                    {% csrf_token %}
+
+                    {{ form|crispy }}
+
                     <div class="text-center">
-                        用語集の詳細を編集する
+                        <a href="{% url 'glossary_detail' object.pk %}"  class="btn btn-secondary btn-sm me-2" role="button">キャンセル</a>
+                        <button type="submit" class="btn btn-primary btn-sm">更新</button>
                     </div>
-                </div>
 
-                <div class="card-body">
-
-                    <form method="POST" novalidate>
-
-                        {% csrf_token %}
-
-                        {{ form|crispy }}
-
-                        <div class="text-center">
-                            <a href="{% url 'glossary_detail' object.pk %}"  class="btn btn-secondary btn-sm me-2" role="button">キャンセル</a>
-                            <button type="submit" class="btn btn-primary btn-sm">更新</button>
-                        </div>
-
-                    </form>
-
-                </div>
+                </form>
 
             </div>
 
