--- a/templates/home.html
+++ b/templates/home.html
@@ -6,13 +6,13 @@
 
     <div class="col-8 m-5">
 
-        <h5 class="mb-4">利用可能なリソース</h5>
+        <h6 class="mb-4">翻訳と用語集の検索可能なデータベース</h6>
 
         <p class="text-muted">
             <small>
-            総計リソース数：{{ num_of_resources|intcomma }}（用語集数：{{ num_of_glossaries|intcomma }}、翻訳数：{{ num_of_translations|intcomma }}）
-            <br>
-            総計エントリー数：{{ num_of_all_entries|intcomma }}（用語集エントリー数：{{ num_of_gloss_entries|intcomma }}、翻訳セグメント数：{{ num_of_trans_segments|intcomma }}）
+                総計リソース数：{{ num_of_resources|intcomma }}（用語集数：{{ num_of_glossaries|intcomma }}、翻訳数：{{ num_of_translations|intcomma }}）
+                <br>
+                総計エントリー数：{{ num_of_all_entries|intcomma }}（用語集エントリー数：{{ num_of_gloss_entries|intcomma }}、翻訳セグメント数：{{ num_of_trans_segments|intcomma }}）
             </small>
         </p>
         <br>
